--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bloggingto",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,10 +15,16 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "graphql": "16.6.0",
+    "graphql-request": "6.1.0",
+    "html-react-parser": "4.0.0",
+    "moment": "2.29.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "2.8.4",
+    "sass": "1.62.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
