--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,14 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "semi": "error",
+    "quotes": ["error", "single"],
+    "jsx-quotes": ["error", "prefer-double"],
+    "eol-last": "error",
+    "keyword-spacing": "error",
+    "space-before-blocks": "error",
+    "object-curly-spacing": ["error", "always"],
+    "indent": ["error", 2]
+  }
 }
